--- a/pom.xml
+++ b/pom.xml
@@ -3,11 +3,11 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>dat.sem3</groupId>
-    <artifactId>CA2-startcode</artifactId>
+    <artifactId>3semExam</artifactId>
     <version>1.0.1</version>
     <packaging>war</packaging>
 
-    <name>CA2-startcode</name>
+    <name>3semExam</name>
 
     <properties>
         <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
